<resources>
    <string name="app_name">android-client</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="invalid_email">Username must be a valid email address</string>
    <string name="login_error_unknown">\"An unknown error has occurred.\"</string>
    <string name="server_error">Server error</string>
    <string name="network_error">Network error</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="already_registered">This email address has already been registered.</string>
    <string name="user_already_exists_error">User already exists.</string>
    <string name="user_not_registered_error">No user exists for this email address.</string>
    <string name="user_not_authorized">Incorrect password.</string>
    <string name="action_logout">Logout</string>
    <string name="get_airports_content_description">Get list of all known airports.</string>
</resources>